# wondertrader

./: .gitignore  Dockerfile  LICENSE  README.md  copy_bins_linux.sh  copy_bins_win.bat  updatelog.md
demos/: .gitignore  CMakeLists.txt  README.md  WTSDemo.sln
demos/BackTester/: BackTester.cpp  BackTester.vcxproj  BackTester.vcxproj.filters  copyfiles.bat  stdafx.h
demos/Includes/: ExecuteDefs.h  FasterDefs.h  HftStrategyDefs.h  ICtaStraCtx.h  IDataFactory.h  IDataReader.h  IHftStraCtx.h  IParserApi.h  ISessionMgr.h  ITraderApi.h  SelStrategyDefs.h  WTSContractInfo.hpp  WTSDataDef.hpp  WTSExpressData.hpp  WTSMarcos.h  WTSParams.hpp  WTSSessionInfo.hpp  WTSStruct.h  WTSTradeDef.hpp  WTSVariant.hpp  WTSVersion.h
demos/Share/: StdUtils.hpp  StrUtil.hpp  TimeUtils.hpp  decimal.h
demos/WtCtaStraFact/: CMakeLists.txt  WtCtaStraFact.cpp  WtCtaStraFact.h  WtCtaStraFact.vcxproj  WtStraDualThrust.cpp  WtStraDualThrust.h
demos/WtExeFact/: CMakeLists.txt  WtExeFact.h  WtExeFact.vcxproj  WtExeFact.vcxproj.filters  WtMinImpactExeUnit.cpp  WtMinImpactExeUnit.h  WtOrdMon.cpp  WtOrdMon.h  WtSimpExeUnit.cpp  WtSimpExeUnit.h  WtTWapExeUnit.cpp  WtTWapExeUnit.h
demos/WtHftStraFact/: CMakeLists.txt  WtHftStraDemo.cpp  WtHftStraDemo.h  WtHftStraFact.cpp  WtHftStraFact.h  WtHftStraFact.vcxproj  WtHftStraFact.vcxproj.filters
demos/WtSelStraFact/: CMakeLists.txt  WtSelStraFact.h  WtSelStraFact.vcxproj  WtStraDtSel.cpp  WtStraDtSel.h
demos/cpp/: ReadMe!!!!.txt  WTSDemo.sln
demos/py/: README.md
src/: .gitignore  CMakeLists.txt  CMakeLists_UFT.txt  README.md  WonderTrader.sln  all.sln  backtest.sln  build_debug.sh  build_release.sh  build_uft_release.sh  datakit.sln  parsers.sln  product.sln  tools.sln  traders.sln  uft.sln
src/CTPLoader/: CMakeLists.txt  CTPLoader.cpp  CTPLoader.vcxproj  CTPLoader.vcxproj.filters  TraderSpi.cpp  TraderSpi.h
src/CTPOptLoader/: CMakeLists.txt  CTPOptLoader.cpp  CTPOptLoader.vcxproj  CTPOptLoader.vcxproj.filters  TraderSpi.cpp  TraderSpi.h
src/Common/: mdump.cpp  mdump.h  version.h  versiongen.bat
src/Includes/: CtaStrategyDefs.h  ExecuteDefs.h  FasterDefs.h  HftStrategyDefs.h  IBaseDataMgr.h  IBtDtReader.h  ICtaStraCtx.h  IDataFactory.h  IDataManager.h  IDataReader.h  IDataWriter.h  IExpFactory.h  IHftStraCtx.h  IHotMgr.h  IIndexDefs.h  ILogHandler.h  IParserApi.h  IRdmDtReader.h  ISelStraCtx.h  ISessionMgr.h  ITraderApi.h  IUftStraCtx.h  LoaderDef.hpp  RiskMonDefs.h  SelStrategyDefs.h  UftStrategyDefs.h  WTSCollection.hpp  WTSContractInfo.hpp  WTSDataDef.hpp  WTSError.hpp  WTSExpressData.hpp  WTSHotItem.hpp  WTSMarcos.h  WTSObject.hpp  WTSParams.hpp  WTSRiskDef.hpp  WTSSessionInfo.hpp  WTSStruct.h  WTSSwitchItem.hpp  WTSTradeDef.hpp  (+3 more)
src/LoaderRunner/: CMakeLists.txt  LoaderRunner.cpp  LoaderRunner.vcxproj  LoaderRunner.vcxproj.filters
src/MiniLoader/: CMakeLists.txt  MiniLoader.cpp  MiniLoader.vcxproj  MiniLoader.vcxproj.filters  TraderSpi.cpp  TraderSpi.h
src/ParserAresClt/: CMakeLists.txt  ParserAres.cpp  ParserAres.h  ParserAres.vcxproj  ParserAres.vcxproj.filters
src/ParserCTP/: CMakeLists.txt  ParserCTP.cpp  ParserCTP.h  ParserCTP.vcxproj  ParserCTP.vcxproj.filters
src/ParserCTPMini/: CMakeLists.txt  ParserCTPMini.cpp  ParserCTPMini.h  ParserCTPMini.vcxproj  ParserCTPMini.vcxproj.filters
src/ParserCTPOpt/: CMakeLists.txt  ParserCTPOpt.cpp  ParserCTPOpt.h  ParserCTPOpt.vcxproj  ParserCTPOpt.vcxproj.filters
src/ParserFemas/: CMakeLists.txt  ParserFemas.cpp  ParserFemas.h  ParserFemas.vcxproj  ParserFemas.vcxproj.filters
src/ParserHuaX/: ParserHuaX.cpp  ParserHuaX.h  ParserHuaX.vcxproj  ParserHuaX.vcxproj.filters
src/ParserMA/: CMakeLists.txt  ParserMA.cpp  ParserMA.h  ParserMA.vcxproj  ParserMA.vcxproj.filters
src/ParserOES/: CMakeLists.txt  ParserOES.cpp  ParserOES.h  ParserOES.vcxproj  ParserOES.vcxproj.filters
src/ParserShm/: CMakeLists.txt  ParserShm.cpp  ParserShm.h  ParserShm.vcxproj  ParserShm.vcxproj.filters
src/ParserUDP/: CMakeLists.txt  ParserUDP.cpp  ParserUDP.h  ParserUDP.vcxproj  ParserUDP.vcxproj.filters
src/ParserUT/: CMakeLists.txt  ParserUT.cpp  ParserUT.h  ParserUT.vcxproj  ParserUT.vcxproj.filters
src/ParserXTP/: CMakeLists.txt  ParserXTP.cpp  ParserXTP.h  ParserXTP.vcxproj  ParserXTP.vcxproj.filters  stdafx.cpp  stdafx.h
src/ParserXeleSkt/: CMakeLists.txt  ParserXeleSkt.cpp  ParserXeleSkt.filters  ParserXeleSkt.h  ParserXeleSkt.vcxproj  md_struct.h
src/ParserYD/: CMakeLists.txt  ParserYD.cpp  ParserYD.h  ParserYD.vcxproj  ParserYD.vcxproj.filters
src/ParseriTap/: CMakeLists.txt  ParseriTap.cpp  ParseriTap.h  ParseriTap.vcxproj  ParseriTap.vcxproj.filters
src/QuoteFactory/: CMakeLists.txt  QuoteFactory.vcxproj  QuoteFactory.vcxproj.filters  copyfiles.bat  main.cpp
src/Share/: BoostDefine.h  BoostFile.hpp  BoostMappingFile.hpp  BoostShm.hpp  CodeHelper.hpp  Converter.hpp  CpuHelper.hpp  DLLHelper.hpp  DecimalHelper.h  IBaseDataMgr.h  IDataFactory.h  IDataWriter.h  IExpFactory.h  IHotMgr.h  ILogHandler.h  IParserApi.h  ISessionMgr.h  ITraderApi.h  IniFile.hpp  IniHelper.hpp  JsonToVariant.hpp  MemUtils.hpp  ModuleHelper.hpp  ObjectPool.hpp  PacketDefine.h  PriceHelper.hpp  ProcHelper.hpp  Share.vcxproj  Share.vcxproj.filters  SimpleCache.hpp  SpinLock.hpp  SpinMutex.hpp  StdUtils.hpp  StrUtil.hpp  TimeUtils.hpp  WTSAllocator.hpp  WTSCollection.hpp  WTSContractInfo.hpp  WTSDataDef.hpp  WTSError.hpp  (+17 more)
src/TestBtPorter/: CMakeLists.txt  TestBtPorter.cpp  TestBtPorter.vcxproj  TestBtPorter.vcxproj.filters  main.cpp
src/TestDtPorter/: CMakeLists.txt  TestDtPorter.vcxproj  TestDtPorter.vcxproj.filters  main.cpp  testDtServo.cpp
src/TestExecPorter/: CMakeLists.txt  TestExecPorter.cpp  TestExecPorter.vcxproj  TestExecPorter.vcxproj.filters  main.cpp
src/TestMQ/: TestMQ.vcxproj  copyfiles.bat  main.cpp
src/TestParser/: CMakeLists.txt  IniFile.hpp  TestParser.vcxproj  main.cpp
src/TestPorter/: CMakeLists.txt  ReadMe.txt  TestPorter.cpp  TestPorter.vcxproj  TestPorter.vcxproj.filters  main.cpp  stdafx.cpp
src/TestTrader/: CMakeLists.txt  TestTrader.vcxproj  main.cpp
src/WTSUtils/: MD5Sum.h  (+12 more)
(+1061 files in other folders)
