
#1. 确定CMake的最低版本需求
CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)

#2. 确定工程名
PROJECT(ParserFemas LANGUAGES CXX)
SET(CMAKE_CXX_STANDARD 17)

SET(SRC  
	${PROJECT_SOURCE_DIR}/ParserFemas.cpp
	${PROJECT_SOURCE_DIR}/ParserFemas.h
)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/build_${PLATFORM}/${CMAKE_BUILD_TYPE}/bin)

INCLUDE_DIRECTORIES(${INCS})
LINK_DIRECTORIES(${LNKS})
ADD_LIBRARY(ParserFemas SHARED ${SRC})

IF(MSVC)
ELSE(GNUCC)
	SET(LIBS
		boost_filesystem
		dl
	)
	TARGET_LINK_LIBRARIES(ParserFemas ${LIBS})
ENDIF()

IF (MSVC)
ELSE (GNUCC)
	SET_TARGET_PROPERTIES(ParserFemas PROPERTIES
		CXX_VISIBILITY_PRESET hidden
		C_VISIBILITY_PRESET hidden
		VISIBILITY_INLINES_HIDDEN 1
        LINK_FLAGS_RELEASE -s)
ENDIF ()

