
#1. 确定CMake的最低版本需求
CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)

#2. 确定工程名
PROJECT(TestUnits LANGUAGES CXX)
SET(CMAKE_CXX_STANDARD 11)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../build_${PLATFORM}/${CMAKE_BUILD_TYPE}/bin/TestUnits)

#7. 添加源码
file(GLOB SRCS *.cpp ./gtest/*.cc)

SET(LIBS
	WTSUtils)
IF (MSVC)
ELSE(GNUCC)
    LIST(APPEND LIBS pthread)
	IF(WIN32)
		LIST(APPEND LIBS iconv)
	ENDIF()
ENDIF()

LIST(APPEND INCS "./gtest")

INCLUDE_DIRECTORIES(${INCS})
LINK_DIRECTORIES(${LNKS})

ADD_EXECUTABLE(TestUnits ${SRCS})
TARGET_LINK_LIBRARIES(TestUnits ${LIBS})

IF (MSVC)
ELSE (GNUCC)
	SET_TARGET_PROPERTIES(TestUnits PROPERTIES
        LINK_FLAGS_RELEASE -s)
ENDIF ()