
#1. 确定CMake的最低版本需求
CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)

#2. 确定工程名
PROJECT(TraderMocker LANGUAGES CXX)
SET(CMAKE_CXX_STANDARD 11)

SET(SRC  
	${PROJECT_SOURCE_DIR}/TraderMocker.cpp
	${PROJECT_SOURCE_DIR}/TraderMocker.h
)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../build_${PLATFORM}/${CMAKE_BUILD_TYPE}/bin)

INCLUDE_DIRECTORIES(${INCS})
LINK_DIRECTORIES(${LNKS})
ADD_LIBRARY(TraderMocker SHARED ${SRC})

IF(MSVC)
	SET(LIBS
		ws2_32
		)
ELSE(GNUCC)
	IF(WIN32)
		SET(LIBS
			boost_thread
			boost_filesystem
			ws2_32
		)
	ELSE(UNIX)
		SET(LIBS
			boost_thread
			boost_filesystem
		)
	ENDIF()
ENDIF()
TARGET_LINK_LIBRARIES(TraderMocker ${LIBS})

IF (MSVC)
ELSE (GNUCC)
	SET_TARGET_PROPERTIES(TraderMocker PROPERTIES
		CXX_VISIBILITY_PRESET hidden
		C_VISIBILITY_PRESET hidden
		VISIBILITY_INLINES_HIDDEN 1
        LINK_FLAGS_RELEASE -s)
ENDIF ()

